--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
     
 </head>
 <body>
- <div>
-   <div id="orange">
-     <p>dog</p> 
-   </div>
-   <div id="blue">
-     <p>cat</p>
-   </div>
- </div>
- <div>
-   <div>
+  <h1 class="header">Shelby Ashburn.xyz</h1>
+  <div class="bars">
+    <div class="orange-bar"></div> 
+    <div class="blue-bar"></div>
+  </div>
+  <div>
+    <div id="arms_folded">
       <img class="image"  src="images/ReadyPlayerMe-Avatar_crop_angle.png" alt="man standing sideways looking forward">
-   </div>
- </div>
+    </div>
+  </div>
+
+
+
+  
 </body>
 <footer>
 
