--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-  <h1 class="header">Shelby Ashburn.xyz</h1>
+  <h1 class="header">Shelby Ashburn</h1>
   <div class="bars">
     <div class="orange-bar"></div> 
     <div class="blue-bar"></div>
@@ -20,12 +20,19 @@
       <img class="image"  src="images/ReadyPlayerMe-Avatar_crop_angle.png" alt="man standing sideways looking forward">
     </div>
   </div>
-
-
+  <div id="coming-soon">
+    <p>Coming soon</p>
+  </div>
+  <div>
+    <p>Coming soon</p>
+  </div>
 
   
 </body>
 <footer>
-
+  <div class="games-link">
+    <a href="games.html" target="_blank">FOOTBALL</a>
+ </div>
+</footer>
 </footer>
 </html>
