--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!--placeholder-->
+<!--Welcome. I have created a sight for developers to access screenshots of my grades as I persue a degree at the 
+University of the People. You can access it by pasting this link in a browser. https://www.shelbyashburn.xyz/school.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +11,7 @@
     
 </head>
 <body>
-  <h1 class="header">Shelby Ashburn</h1>
+  <h1 class="header">Always in Development</h1><!--transition to 'shelby ashburn'-->
   <div class="bars">
     <div class="orange-bar"></div> 
     <div class="blue-bar"></div>
