--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@ University of the People. You can access it by pasting this link in a browser. h
     
 </head>
 <body>
-  <h1 class="header">Always in Development</h1><!--transition to 'shelby ashburn'-->
+  <h1 class="header"><!--placeholder-->
+    <div class="carousel-container">
+      <ul class="flip2">
+        <li>Always in Development</li>
+        <li>Shelby Ashburn.xyz</li>
+      </ul>
+    </div>
+  </h1>
   <div class="bars">
     <div class="orange-bar"></div> 
     <div class="blue-bar"></div>
@@ -22,10 +29,7 @@ University of the People. You can access it by pasting this link in a browser. h
     </div>
   </div>
   <div id="coming-soon">
-    <p>Coming soon</p>
-  </div>
-  <div>
-    <p>Coming soon</p>
+    <p>Coming Soon</p><p>Coming Soon</p>
   </div>
 
   
