--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#!">Contact Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="games.html">Football</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">Portfolio</a></li>
                     </ul>
                 </div>
             </div>
@@ -68,8 +68,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">We salute you...</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+                            <h2 class="display-4">Keeping it Simple...</h2>
+                            <p>Specializing in <i>fast-up</i> small business website templates, I can get you on the web <i>fast</i> and <i>affordable</i>.</p>
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/03.jpg" alt="..." /></div>
+                        <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/walking.png" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
