--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -52,8 +52,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Keeping it Simple...</h2>
-                            <p>Specializing in <i>fast-up</i> small business website templates, I can get you on the web fast and affordable.</p>
+                            <h2 class="display-4">Custom Website Solutions...</h2>
+                            <p>Let's design a web experience to connect you with your customers.</p>
                         </div>
                     </div>
                 </div>
