Second page work

--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -23,8 +23,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!" target="_blank">Contact Me</a></li>
+                        <li class="nav-item"><a class="nav-link" href="second.html" target="_blank">Portfolio</a></li>
                     </ul>
                 </div>
             </div>
@@ -35,7 +35,7 @@
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Shelby Ashburn</h1>
                     <h2 class="masthead-subheading mb-0">A Portfolio Site</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Learn More</a>
+                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Start</a>
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
