--- a/startbootstrap-one-page-wonder-gh-pages/second.html
+++ b/startbootstrap-one-page-wonder-gh-pages/second.html
@@ -5,17 +5,17 @@ University of the People. You can access it by pasting this link in a browser. h
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shelby Ashburn</title>
-    <link href="styles.css" rel="stylesheet" />
+    <title>My Portfolio</title>
+    <link href="styles.css" rel="stylesheet">
     <link href="ShelbyXYZ/images">
     
 </head>
 <body>
-  <h1 class="header"><!--placeholder-->
+  <h1 class="header">Portfolio</h1>
     <div class="carousel-container">
       <ul class="flip2">
-        <li>Always in Development</li>
-        <li>Shelby Ashburn.xyz</li>
+        <li class="masthead-subheading mb-0">Always in Development</li>
+        <li class="nav-item" class="nav-link">Shelby Ashburn.xyz</li>
       </ul>
     </div>
   </h1>
@@ -25,7 +25,7 @@ University of the People. You can access it by pasting this link in a browser. h
   </div>
   <div>
     <div id="arms_folded">
-      <img class="image"  src="images/ReadyPlayerMe-Avatar_crop_angle.png" alt="man standing sideways looking forward">
+      <img class="image"  src="assets\img\side_stand.png" alt="man standing sideways looking forward">
     </div>
   </div>
   <div id="coming-soon">
