--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#!" target="_blank">Contact Me</a></li>
-                        <li class="nav-item"><a class="nav-link" href="second.html" target="_blank">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="portfolio.html" target="_blank">Portfolio</a></li>
                     </ul>
                 </div>
             </div>
@@ -52,8 +52,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Custom Website Solutions...</h2>
-                            <p>Let's design a web experience to connect you with your customers.</p>
+                            <h2 class="display-4">Always in Development...</h2>
+                            <p>I am always looking to <i>improve</i> upon the previous project. Whether it be cleaner code, better UI/UX, my goal is to learn <b>each and every day.</b></p>
                         </div>
                     </div>
                 </div>
@@ -84,8 +84,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Always in Development...</h2>
-                            <p>I am always trying to improve upon the previous project. Whether it be cleaner code, better UI/UX or the perfect colors, my goal is to learn each and every day.</p>
+                            <h2 class="display-4">Attention to Detail...</h2>
+                            <p>&quot;Quality is more important than quantity. One home run is much better than two doubles.&quot; <b>-Steve Jobs.</b></p>
                         </div>
                     </div>
                 </div>
@@ -94,6 +94,7 @@
         <!-- Footer-->
         <footer class="py-5 bg-black">
             <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; ShelbyAshburn.xyz 2024. Avatar courtesy of Ready Player.Me</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small"><a href="games.html" target="_blank">Extras</a></p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
