--- a/startbootstrap-one-page-wonder-gh-pages/portfolio.html
+++ b/startbootstrap-one-page-wonder-gh-pages/portfolio.html
@@ -1,21 +1,26 @@
-<!--Welcome. I have created a sight for developers to access screenshots of my grades as I persue a degree at the 
-University of the People. You can access it by pasting this link in a browser. https://www.shelbyashburn.xyz/school.html -->
+<!--Welcome. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link href="styles.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Font Awesome icons (free version)-->
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
     <link href="ShelbyXYZ/images">
     
 </head>
-<body>
+<body  id="page-top">
   <h1 class="header">Portfolio</h1>
     <div class="carousel-container">
       <ul class="flip2">
         <li class="masthead-subheading mb-0">Always in Development</li>
-        <li class="nav-item" class="nav-link">Shelby Ashburn.xyz</li>
       </ul>
     </div>
   </h1>
@@ -36,7 +41,7 @@ University of the People. You can access it by pasting this link in a browser. h
 </body>
 <footer>
   <div class="games-link">
-    <a href="games.html" target="_blank">FOOTBALL</a>
+    
  </div>
 </footer>
 </footer>
