--- a/startbootstrap-one-page-wonder-gh-pages/games.html
+++ b/startbootstrap-one-page-wonder-gh-pages/games.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shelby Ashburn</title>
+    <title>Extras</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -17,6 +17,7 @@
 </head>
 <body class="games">
   <h1 class="games-header">Football Scores Selector</h1>
+  <h6>FOR ENTERTAINMENT PURPOSES ONLY</h6>
   <div class="">
     <div class=""></div> 
     <div class=""></div>
@@ -28,6 +29,6 @@
   
 </body>
 <footer>
-<P class="games-p">FOR ENTERTAINMENT PURPOSES ONLY</P>
+
 </footer>
 </html>
