--- a/startbootstrap-one-page-wonder-gh-pages/portfolio.html
+++ b/startbootstrap-one-page-wonder-gh-pages/portfolio.html
@@ -18,25 +18,19 @@
 </head>
 <body  id="page-top">
   <h1 class="header">Portfolio</h1>
-    <div class="carousel-container">
-      <ul class="flip2">
-        <li class="masthead-subheading mb-0">Always in Development</li>
-      </ul>
-    </div>
-  </h1>
-  <div class="bars">
-    <div class="orange-bar"></div> 
-    <div class="blue-bar"></div>
-  </div>
   <div>
     <div id="arms_folded">
-      <img class="image"  src="assets\img\side_stand.png" alt="man standing sideways looking forward">
+      <img class="image" src="assets\img\crop_angle.png" alt="man standing sideways looking forward">
     </div>
   </div>
   <div id="coming-soon">
-    <p>Coming Soon</p><p>Coming Soon</p>
+    <div>
+      <p>Coming Soon Grices garage</p>
+    </div>
+    <div>
+      <p>Coming Soon</p>
+    </div>
   </div>
-
   
 </body>
 <footer>
