--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="description" content="A portfolio website to demonstrate abilities and experience." />
         <meta name="author" content="" />
-        <title>ShelbyAshburn.xyz</title>
+        <title>ShelbyAshburn.xyz - web development portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -93,9 +93,8 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; ShelbyAshburn.xyz 2024. Avatar courtesy of <a href="https://readyplayer.me">Readyplayer.me</a></p></div>
-            <div class="container px-5"><p class="m-0 text-center text-white small"><a href="games.html" target="_blank">Extras</a></p></div>
-            <div class="container px-5"><p class="m-0 text-center text-white small">Email me for any inquiries at sgashburn@gmail.com</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; ShelbyAshburn.xyz 2024. Avatar courtesy of <a href="https://readyplayer.me" rel="noopener">Readyplayer.me</a></p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Email me at sgashburn@gmail.com &lpar; copy and paste &rpar;</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
