--- a/startbootstrap-one-page-wonder-gh-pages/portfolio.html
+++ b/startbootstrap-one-page-wonder-gh-pages/portfolio.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="the portfolio." />
     <title>My Portfolio</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
@@ -25,7 +26,18 @@
   </div>
   <div id="coming-soon">
     <div>
+      <a class="github" rel="noopener " href="https://www.github.com/shelbyashburn" target="_blank">Go to my Github!</a>
+    </div>
+  </div>
+  <div id="coming-soon">
+    <div>
       <p>Coming Soon Grices garage</p>
+    </div>
+    <div>
+      <p>Coming Soon</p>
+    </div>
+    <div>
+      <p>Coming Soon</p>
     </div>
     <div>
       <p>Coming Soon</p>
@@ -34,9 +46,7 @@
   
 </body>
 <footer>
-  <div class="games-link">
-    
- </div>
+ 
 </footer>
 </footer>
 </html>
