Prep to remove portfolio page

--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -35,7 +35,7 @@
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Shelby Ashburn</h1>
                     <h2 class="masthead-subheading mb-0">A Portfolio Site</h2>
-                    <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Start</a>
+                    <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Start</a>-->
                 </div>
             </div>
             <div class="bg-circle-1 bg-circle"></div>
@@ -53,7 +53,7 @@
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">Always in Development...</h2>
-                            <p>I am always looking to <i>improve</i> upon the previous project. Whether it be cleaner code, better UI/UX, my goal is to learn <b>each and every day.</b></p>
+                            <p>I am always looking to <i>improve</i> upon the previous project. Whether it be cleaner code, better UI/UX, my goal is to learn <b>each and every day. </b>Please go to my <a class="github" rel="noopener " href="https://www.github.com/shelbyashburn" target="_blank">Github</a> repo!</p>
                         </div>
                     </div>
                 </div>
@@ -68,8 +68,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">Keeping it Simple...</h2>
-                            <p>Specializing in <i>fast-up</i> small business website templates, I can get you on the web <i>fast</i> and <i>affordable</i>.</p>
+                            <h2 class="display-4">Attention to Detail...</h2>
+                            <p>Specializing in <i>fast-up</i> small business website templates, I can get you on the web <i>fast</i> and <i>affordable</i>. &quot; Quality is more important than quantity. One home run is much better than two doubles. &quot;<b>-Steve Jobs.</b></p>
                         </div>
                     </div>
                 </div>
@@ -84,8 +84,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Attention to Detail...</h2>
-                            <p>&quot;Quality is more important than quantity. One home run is much better than two doubles.&quot; <b>-Steve Jobs.</b></p>
+                            <h2 class="display-4">Widgets and Apps...</h2>
+                            <p>intro <a href="#">anchor tag for a new page</a> outro</p>
                         </div>
                     </div>
                 </div>
