--- a/startbootstrap-one-page-wonder-gh-pages/portfolio.html
+++ b/startbootstrap-one-page-wonder-gh-pages/portfolio.html
@@ -26,12 +26,12 @@
   </div>
   <div id="coming-soon">
     <div>
-      <a class="github" rel="noopener " href="https://www.github.com/shelbyashburn" target="_blank">Go to my Github!</a>
+     
     </div>
   </div>
   <div id="coming-soon">
     <div>
-      <p>Coming Soon Grices garage</p>
+      <p></p><a  rel="noopener" href="https://shelbyashburn.github.io/grices-garage-llc/#!" target="_blank">Grices Garage llc</a></p>
     </div>
     <div>
       <p>Coming Soon</p>
