--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -16,19 +16,20 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
-        <!-- Navigation-->
+        <!-- Navigation
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
                 <a class="navbar-brand" href="#page-top">TOP</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <!--<li class="nav-item"><a class="nav-link" href="#!" target="_blank">Contact Me</a></li>-->
+                        
                         <li class="nav-item"><a class="nav-link" href="portfolio.html" target="_blank">Portfolio</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+        -->
         <!-- Header-->
         <header class="masthead text-center text-white">
             <div class="masthead-content">
@@ -69,7 +70,7 @@
                     <div class="col-lg-6">
                         <div class="p-5">
                             <h2 class="display-4">Attention to Detail...</h2>
-                            <p>Specializing in <i>fast-up</i> small business website templates, I can get you on the web <i>fast</i> and <i>affordable</i>. &quot; Quality is more important than quantity. One home run is much better than two doubles. &quot;<b>-Steve Jobs.</b></p>
+                            <p>Specializing in <i>fast-up</i> small business website templates, I can get you on the web <i>fast</i> and <i>affordable</i>. &quot; Quality is more important than quantity. One home run is much better than two doubles. &quot;<b>-Steve Jobs.</b><br>See what I've been up to.<br><a rel="noopener" href="https://shelbyashburn.github.io/grices-garage-llc/#!" target="_blank"><b>Grices Garage</b></a></p>
                         </div>
                     </div>
                 </div>
@@ -84,8 +85,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Widgets and Apps...</h2>
-                            <p>intro <a href="#">anchor tag for a new page</a> outro</p>
+                            <h2 class="display-4">Apps page...</h2>
+                            <p>Click here to <a rel="noopener"  href="apps.html" target="_blank" >ENTER</a> the Apps page.</p>
                         </div>
                     </div>
                 </div>
@@ -95,6 +96,7 @@
         <footer class="py-5 bg-black">
             <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; ShelbyAshburn.xyz 2024. Avatar courtesy of <a href="https://readyplayer.me" rel="noopener">Readyplayer.me</a></p></div>
             <div class="container px-5"><p class="m-0 text-center text-white small">Email me at sgashburn@gmail.com &lpar; copy and paste &rpar;</p></div>
+            <div class="container px-5"><a class="m-0 text-center text-white small" href="#page-top">Back to the top</a></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
