--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="A portfolio website to demonstrate abilities and experience." />
+        <meta name="description" content="developer portfolio, HTML, CSS, JavaScript, web developer" />
         <meta name="author" content="" />
-        <title>ShelbyAshburn.xyz - web development portfolio</title>
+        <title>Digital Development</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -34,8 +34,8 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">Shelby Ashburn</h1>
-                    <h2 class="masthead-subheading mb-0">A Portfolio Site</h2>
+                    <h1 class="masthead-heading mb-0">Digital Development</h1>
+                    <h2 class="masthead-subheading mb-0">Portfolio</h2>
                     <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Start</a>-->
                 </div>
             </div>
