--- a/startbootstrap-one-page-wonder-gh-pages/apps.html
+++ b/startbootstrap-one-page-wonder-gh-pages/apps.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="the portfolio." />
+    <meta name="description" content="Clock tab type site with apps" />
     <title>The App Page</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Font Awesome icons (free version)-->
