--- a/startbootstrap-one-page-wonder-gh-pages/apps.html
+++ b/startbootstrap-one-page-wonder-gh-pages/apps.html
@@ -15,16 +15,20 @@
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="ShelbyXYZ/images">
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9385480445320666"
+     crossorigin="anonymous"></script>
 </head>
 <body  id="page-top" onload=display_ct();>
-  <h1 class="header">APPS</h1>
+  <h1 class="header">Clock</h1>
   <div id="clock">
     <div>
         <p id="ct"></p>
     </div>
   </div>
   <p id="app-comment">The screen will stay awake while this page is active.</p>
+  <div class="bg-rainbow"></div>
+  <div class="bg-rainbow bg2-rainbow"></div>
+  <div class="bg-rainbow bg3-rainbow"></div>
   <script>
     // Check if the Wake Lock API is supported
 if ('wakeLock' in navigator) {
