--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="developer portfolio, HTML, CSS, JavaScript, web developer" />
         <meta name="author" content="" />
-        <title>Digital Development</title>
+        <title>Codexfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9385480445320666"
+     crossorigin="anonymous"></script>
     </head>
     <body id="page-top">
         <!-- Navigation
@@ -34,7 +36,7 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container px-5">
-                    <h1 class="masthead-heading mb-0">Digital Development</h1>
+                    <h1 class="masthead-heading mb-0">Codexfolio</h1>
                     <h2 class="masthead-subheading mb-0">Portfolio</h2>
                     <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Start</a>-->
                 </div>
@@ -95,7 +97,7 @@
         <!-- Footer-->
         <footer class="py-5 bg-black">
             <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; ShelbyAshburn.xyz 2024. Avatar courtesy of <a href="https://readyplayer.me" rel="noopener">Readyplayer.me</a></p></div>
-            <div class="container px-5"><p class="m-0 text-center text-white small">Email me at sgashburn@gmail.com &lpar; copy and paste &rpar;</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Find me on <a href="www.linkedin.com/in/shelby-ashburn-633ba7223" rel="noopener">LinkedIn</a></p></div>
             <div class="container px-5"><a class="m-0 text-center text-white small" href="#page-top">Back to the top</a></div>
         </footer>
         <!-- Bootstrap core JS-->
