news column early stage

--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -37,7 +37,7 @@
             <div class="masthead-content">
                 <div class="container px-5">
                     <h1 class="masthead-heading mb-0">Codexfolio</h1>
-                    <h2 class="masthead-subheading mb-0">Portfolio website</h2>
+                    <h2 class="masthead-subheading mb-0">A Portfolio Website</h2>
                     <!--<a class="btn btn-primary btn-xl rounded-pill mt-5" href="#scroll">Start</a>-->
                 </div>
             </div>
@@ -96,7 +96,7 @@
         </section>
         <!-- Footer-->
         <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; ShelbyAshburn.xyz 2024. Avatar courtesy of <a href="https://readyplayer.me" rel="noopener" target="_blank">Readyplayer.me</a></p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Codexfolio.dev 2024. Avatar courtesy of <a href="https://readyplayer.me" rel="noopener" target="_blank">Readyplayer.me</a></p></div>
             <div class="container px-5"><p class="m-0 text-center text-white small">Find me on <a href="https://www.linkedin.com/in/shelby-ashburn-633ba7223" rel="noopener" target="_blank">LinkedIn</a></p></div>
             <div class="container px-5"><a class="m-0 text-center text-white small" href="#page-top">Back to the top</a></div>
         </footer>
