updated news page

--- a/startbootstrap-one-page-wonder-gh-pages/index.html
+++ b/startbootstrap-one-page-wonder-gh-pages/index.html
@@ -87,8 +87,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Apps page...</h2>
-                            <p>Click here to <a rel="noopener"  href="apps.html" target="_blank" >ENTER</a> the News page.</p>
+                            <h2 class="display-4">The News page...</h2>
+                            <p>Click here to <a rel="noopener"  href="apps.html" target="_blank" >ENTER</a> the News page and keep your screen awake.</p>
                         </div>
                     </div>
                 </div>
