--- a/startbootstrap-one-page-wonder-gh-pages/apps.html
+++ b/startbootstrap-one-page-wonder-gh-pages/apps.html
@@ -18,7 +18,7 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9385480445320666"
      crossorigin="anonymous"></script>
 </head>
-<body  id="page-top" onload=display_ct();>
+<body  id="page-top app-body" onload=display_ct();>
   <h1 class="header">The News Page</h1>
   <div id="clock">
     <div>
@@ -73,9 +73,9 @@ if ('wakeLock' in navigator) {
   <!--The news link colums. 3 x 15-->
   <div class="news-grid">
     <!--Column 1-->
-    <a class="news-item news-item-heading" href="">Sports Pages</a>
-    <a class="news-item news-item-heading" href="">Money</a>
-    <a class="news-item news-item-heading" href="">Entertainment</a>
+    <p class="news-item news-item-heading">Sports Pages</p>
+    <p class="news-item news-item-heading">Money</p>
+    <p class="news-item news-item-heading">Entertainment</p>
     <a class="news-item" rel="noopener" target="_blank" href="https://www.outkick.com/">Outkick the Coverage</a>
     <a class="news-item" rel="noopener" target="_blank" href="https://www.zerohedge.com/">Zero Hedge</a>
     <a class="news-item" rel="noopener" target="_blank" href="https://www.tmz.com/">TMZ</a>
@@ -88,10 +88,31 @@ if ('wakeLock' in navigator) {
     <a class="news-item" rel="noopener" target="_blank" href="https://www.bleacherreport.com/">The Bleacher Report</a>
     <a class="news-item" rel="noopener" target="_blank" href="https://www.economist.com/">The Economist</a>
     <a class="news-item" rel="noopener" target="_blank" href="https://www.dailymail.co.uk/usshowbiz/index.html">Daily Mail</a>
+    <p class="news-item news-item-heading">Technology</p>
+    <p class="news-item news-item-heading">Lifestyle</p>
+    <p class="news-item news-item-heading">Strange News</p>
+    <a class="news-item" rel="noopener" target="_blank" href="https://www.cnet.com/">CNet</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://hikingguy.com/">Hiking Guy</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://www.odditycentral.com/">Oddity Central</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://www.technewsworld.com/">Tech News World</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://www.southernliving.com/">Southern Living</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://allthatsinteresting.com/">All That Is Interesting</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://www.wired.com/">Wired</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://www.gq.com/">GQ</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://www.coasttocoastam.com/">Coast To Coast A.M.</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://www.pcmag.com/">PC Mag</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://people.com/">People Magazine</a>
+    <a class="news-item" rel="noopener" target="_blank" href="https://paranormaldailynews.com/">Paranormal News Daily</a>
+    
   </div>
 </body>
-<footer>
-    
+<footer  class="py-5 bg-black">
+  <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Codexfolio.dev 2024. Avatar courtesy of <a href="https://readyplayer.me" rel="noopener" target="_blank">Readyplayer.me</a></p></div>
+  <div class="container px-5"><p class="m-0 text-center text-white small">Find me on <a href="https://www.linkedin.com/in/shelby-ashburn-633ba7223" rel="noopener" target="_blank">LinkedIn</a></p></div>   
 </footer>
+<!-- Bootstrap core JS-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Core theme JS-->
+<script src="js/scripts.js"></script>
 <script src="js/scripts.js"></script>
 </html>
